# Hand_gesture_recognitionation

./: README.md  main.py  pyproject.toml
