[project]
name = "hand-gesture-recognitionation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hand-gesture-recognizer>=1.3.1",
    "matplotlib>=3.10.1",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.18.1",
]
